--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@nomicfundation/hardhat - toolbox": "^2.0.1",
+    "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "dotenv": "^10.0.0",
+    "ethers": "6.12.1",
+    "hardhat": "^2.8.3",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
-    "ethers": "^5.5.4",
     "install": "^0.13.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -37,8 +41,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "hardhat": "^2.22.3"
   }
 }
